Rename app on main page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar color="primary">
   <mat-toolbar-row>
-    <span>Bugzilla DishBoard</span>
+    <span>Buguette</span>
   </mat-toolbar-row>
 </mat-toolbar>
 
