--- a/src/app/login-page/login-page.component.html
+++ b/src/app/login-page/login-page.component.html
@@ -1,24 +1,52 @@
-<mat-card>
-  <mat-card-content>
-    <form [formGroup]="form" (ngSubmit)="onSubmit()">
-      <h2>Sing in to DishBoard</h2>
-      <mat-error *ngIf="loginInvalid">
-        The username and password were not recognised
-      </mat-error>
-      <mat-form-field class="full-width-input">
-        <input matInput placeholder="Email" formControlName="username" required>
-        <mat-error>
-          Please provide a valid email address
-        </mat-error>
-      </mat-form-field>
-      <mat-form-field class="full-width-input">
-        <input matInput type="password" placeholder="Password" formControlName="password" required>
-        <mat-error>
-          Please provide a valid password
-        </mat-error>
-      </mat-form-field>
-      <button mat-raised-button color="primary">Sing in</button>
-    </form>
-  </mat-card-content>
-</mat-card>
+<mat-tab-group mat-align-tabs="center" dynamicHeight=true>
+  <mat-tab label="Login/Password">
+    <mat-card>
+      <mat-card-content>
+        <form [formGroup]="form" (ngSubmit)="onSubmit()">
+          <h2>Sing in to Buguette</h2>
+          <mat-error *ngIf="loginInvalid">
+            The username and password were not recognised
+          </mat-error>
+          <mat-form-field class="full-width-input">
+            <input matInput placeholder="Email" formControlName="username" required>
+            <mat-error>
+              Please provide a valid email address
+            </mat-error>
+          </mat-form-field>
+          <mat-form-field class="full-width-input">
+            <input matInput type="password" placeholder="Password" formControlName="password" required>
+            <mat-error>
+              Please provide a valid password
+            </mat-error>
+          </mat-form-field>
+          <button mat-raised-button color="primary">Sing in</button>
+        </form>
+      </mat-card-content>
+    </mat-card>
+  </mat-tab>
+  <mat-tab label="API Token">
+    <mat-card>
+      <mat-card-content>
+        <form [formGroup]="formToken" (ngSubmit)="onSubmitToken()">
+          <h2>Sing in to Buguette</h2>
+          <mat-error *ngIf="tokenInvalid">
+            Api token is not found
+          </mat-error>
+          <mat-form-field class="full-width-input">
+            <input matInput placeholder="Email" formControlName="username" required>
+          </mat-form-field>
+          <mat-form-field class="full-width-input">
+            <input matInput placeholder="API Token" formControlName="token" required>
+            <mat-error>
+              Please provide a valid token
+            </mat-error>
+          </mat-form-field>
+          <button mat-raised-button color="primary">Sing in</button>
+        </form>
+      </mat-card-content>
+    </mat-card>
+
+  </mat-tab>
+</mat-tab-group>
+
 <mat-spinner *ngIf="loading" style="margin: auto;"></mat-spinner>
