--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,10 @@
 <mat-toolbar color="primary">
   <mat-toolbar-row>
     <span>Buguette</span>
+    <span class="toolbar-fill-space"></span>
+    <button *ngIf="auth.is_authorized()" (click)="logout()" mat-icon-button color="accent" aria-label="Example icon button with a menu icon">
+      <mat-icon>exit_to_app</mat-icon>
+    </button>
   </mat-toolbar-row>
 </mat-toolbar>
 
