Add username to toptoolbar

--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -1,2 +1,2 @@
-<p>main-page works!</p>
-<a href="/search">qqqqqqqqqqqqqqqqqqqqqqq</a>
+<router-outlet></router-outlet>
+<!-- <button mat-button routerLink='/search'>Search</button> -->
