--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,9 +2,16 @@
   <mat-toolbar-row>
     <span>Buguette</span>
     <span class="toolbar-fill-space"></span>
-    <button *ngIf="auth.is_authorized()" (click)="logout()" mat-icon-button color="accent" aria-label="Example icon button with a menu icon">
-      <mat-icon>exit_to_app</mat-icon>
-    </button>
+
+    <mat-menu #appMenu="matMenu">
+      <button (click)="logout()" mat-menu-item>Logout</button>
+    </mat-menu>
+    <div>
+      {{(bugzilla.currentUser$ |async)?.email}}
+      <button *ngIf="auth.is_authorized()" mat-icon-button [matMenuTriggerFor]="appMenu">
+        <mat-icon>menu</mat-icon>
+      </button>
+    </div>
   </mat-toolbar-row>
 </mat-toolbar>
 
