--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,9 +6,14 @@
     <mat-menu #appMenu="matMenu">
       <button (click)="logout()" mat-menu-item>Logout</button>
     </mat-menu>
-    <div>
-      {{(bugzilla.currentUser$ |async)?.email}}
-      <button *ngIf="auth.is_authorized()" mat-icon-button [matMenuTriggerFor]="appMenu">
+    <div *ngIf="auth.is_authorized()">
+      <span *ngIf="(bugzilla.currentUser$ |async) as user; else loading">
+        {{user?.email}}
+      </span>
+      <ng-template #loading>
+        loading...
+      </ng-template>
+      <button mat-icon-button [matMenuTriggerFor]="appMenu">
         <mat-icon>menu</mat-icon>
       </button>
     </div>
