--- a/src/app/search-page/search-page.component.html
+++ b/src/app/search-page/search-page.component.html
@@ -75,12 +75,14 @@
       <mat-card (click)="get_details(bug)" [ngClass]="{'mat-elevation-z10': (bugDetail$ | async)?.id == bug.id}"
         [ngStyle]="{'border-left': '0.3em solid ' + productsColoreRestructured[bug.product]}"
         routerLinkActive="active" class="result-item" *cdkVirtualFor="let bug of bugs">
+
         <mat-icon matTooltip={{bug.severity}}
                   aria-hidden="false"
                   [ngStyle]="{'color': this.severitiesRestructured[bug.severity].color}"
                   >{{this.severitiesRestructured[bug.severity].isFeature?"insights":"bug_report"}}</mat-icon>
         <div class="bug-summary">
           <span style="font-weight: 500;">{{bug.id}}</span>&nbsp;{{bug.summary}}
+          <span *ngIf="bug.priority !== 'P1'">&nbsp;{{bug.priority}}</span>
         </div>
       </mat-card>
     </cdk-virtual-scroll-viewport>
