--- a/src/app/search-page/search-page.component.scss
+++ b/src/app/search-page/search-page.component.scss
@@ -82,5 +82,11 @@
 .bug-summary {
   margin-top: 2px;
   padding-left: 0.2em;
+  flex: 1;
+  max-height: 1.5em;
+  overflow: hidden;
+}
+.bug-information {
+  margin-top: 2px;
 }
 
