--- a/src/app/bug-details/bug-details.component.html
+++ b/src/app/bug-details/bug-details.component.html
@@ -1,4 +1,59 @@
-<div class="result" *ngIf="(bug$ | async) as bug">
+<!-- <div class="result" *ngIf="(bug$ | async) as bug">
   <p>bug-details works!</p>
   {{bug.id}}
-</div>
+  {{bug.product}}
+</div> -->
+<mat-card class="result" *ngIf="(bug$ | async) as bug; else loading">
+  <mat-card-header>
+    <mat-card-title>
+      {{bug.id}}&nbsp;{{bug.summary}}
+    </mat-card-title>
+    <mat-card-subtitle><span [ngStyle]="{'color': severities[bug.severity]?.color}">{{bug.severity}}</span>&nbsp;{{bug.priority}}</mat-card-subtitle>
+    <mat-card-subtitle>{{bug.buguetteStatus}}</mat-card-subtitle>
+    <!-- <mat-card-subtitle>{{bug.product}},&nbsp;</mat-card-subtitle> -->
+  </mat-card-header>
+  <mat-card-content class="addition-data">
+    <div class="addition-params-left">
+      <mat-list class="addition-params">
+        <mat-list-item>
+          <mat-icon mat-list-icon>location_on</mat-icon>
+          <div mat-line [ngStyle]="{'background-color': products[bug.product].color}"
+          matTooltip={{bug.product}}
+          matTooltipPosition="above">{{products[bug.product].name}}</div>
+          <div mat-line>{{bug.component}}</div>
+          <div mat-line>{{bug.version}}</div>
+        </mat-list-item>
+      </mat-list>
+    </div>
+
+    <div class="addition-params-right">
+      <mat-list class="addition-params">
+        <mat-list-item>
+          <mat-icon mat-list-icon>people_alt</mat-icon>
+          <div matLine>
+            <div style="display: inline-block;">{{(bug$ | async).qa_contact || "loading..."}}</div>
+            <div style="display: inline-block;">--></div>
+            <div style="display: inline-block;">{{(bug$ | async).assigned_to_detail?(bug$ | async).assigned_to_detail?.real_name:(bug$ | async).assigned_to}}</div>
+          </div>
+          <p matLine *ngIf="bug.creator !== bug.qa_contact"><span>Creator: {{bug.creator}}</span></p>
+        </mat-list-item>
+      </mat-list>
+    </div>
+    <mat-card-content>
+      asdasdasdas
+
+    </mat-card-content>
+
+
+
+  </mat-card-content>
+  <mat-card-actions>
+    <button mat-button>LIKE</button>
+    <button mat-button>SHARE</button>
+  </mat-card-actions>
+</mat-card>
+
+<ng-template #loading>
+  <mat-spinner style="margin: auto;"></mat-spinner>
+</ng-template>
+
