--- a/src/app/bug-details/bug-details.component.html
+++ b/src/app/bug-details/bug-details.component.html
@@ -1,54 +1,60 @@
 <mat-card class="result" *ngIf="(bug$ | async) as bug; else loading">
   <mat-card-header>
-    <mat-card-title>
+    <mat-card-title style="word-break: break-word;">
       {{bug.id}}&nbsp;{{bug.summary}}
     </mat-card-title>
-    <mat-card-subtitle><span [ngStyle]="{'color': severities[bug.severity]?.color}">{{bug.severity}}</span>&nbsp;{{bug.priority}}</mat-card-subtitle>
+    <mat-card-subtitle><span
+        [ngStyle]="{'color': severities[bug.severity]?.color}">{{bug.severity}}</span>&nbsp;{{bug.priority}}
+    </mat-card-subtitle>
     <mat-card-subtitle>{{bug.buguetteStatus}}</mat-card-subtitle>
     <!-- <mat-card-subtitle>{{bug.product}},&nbsp;</mat-card-subtitle> -->
   </mat-card-header>
   <mat-card-content class="addition-data">
-    <div class="addition-params-left">
-      <mat-list class="addition-params">
-        <mat-list-item>
-          <mat-icon mat-list-icon>location_on</mat-icon>
-          <div mat-line [ngStyle]="{'background-color': products[bug.product].color}"
+    <mat-divider></mat-divider>
+    <div class="addition-params-space">
+      <div class="addition-params">
+        <div class="addition-params-icon">
+          <mat-icon aria-hidden="false" aria-label="Example home icon">location_on</mat-icon>
+        </div>
+        <div class="addition-params-data">
+          <div class="params-data"
+
           matTooltip={{bug.product}}
-          matTooltipPosition="above">{{products[bug.product].name}}</div>
-          <div mat-line>{{bug.component}}</div>
-          <div mat-line>{{bug.version}}</div>
-        </mat-list-item>
-      </mat-list>
+          matTooltipPosition="above"><span [ngStyle]="{'background-color': products[bug.product].color}">{{products[bug.product].name}}</span></div>
+          <div class="params-data">{{bug.component}}</div>
+          <div class="params-data">{{bug.version}}</div>
+        </div>
+      </div>
+      <div class="addition-params">
+        <div class="addition-params-icon">
+          <mat-icon aria-hidden="false" aria-label="Example home icon">people_alt</mat-icon>
+        </div>
+        <div class="addition-params-data">
+          <div class="params-data">
+            {{(bug$ | async).qa_contact || "loading..."}}
+             ==> {{(bug$ | async).assigned_to_detail?(bug$ | async).assigned_to_detail?.real_name:(bug$ | async).assigned_to}}
+            </div>
+          <div class="params-data" *ngIf="bug.creator !== bug.qa_contact">Creator: {{bug.creator}}</div>
+        </div>
+      </div>
+    </div>
+    <mat-divider></mat-divider>
+    <div class="comment">
+      <span class="comment-text">
+        {{bug.comments[0]?.text}}
+      </span>
     </div>
 
-    <div class="addition-params-right">
-      <mat-list class="addition-params">
-        <mat-list-item>
-          <mat-icon mat-list-icon>people_alt</mat-icon>
-          <div matLine>
-            <div style="display: inline-block;">{{(bug$ | async).qa_contact || "loading..."}}</div>
-            <div style="display: inline-block;">--></div>
-            <div style="display: inline-block;">{{(bug$ | async).assigned_to_detail?(bug$ | async).assigned_to_detail?.real_name:(bug$ | async).assigned_to}}</div>
-          </div>
-          <p matLine *ngIf="bug.creator !== bug.qa_contact"><span>Creator: {{bug.creator}}</span></p>
-        </mat-list-item>
-      </mat-list>
-    </div>
-    <mat-card-content>
-      asdasdasdas
 
-    </mat-card-content>
+
 
 
 
   </mat-card-content>
-  <mat-card-actions>
-    <button mat-button>LIKE</button>
-    <button mat-button>SHARE</button>
-  </mat-card-actions>
+
+
 </mat-card>
 
 <ng-template #loading>
   <mat-spinner style="margin: auto;"></mat-spinner>
 </ng-template>
-
