--- a/src/app/search-page/search-page.component.scss
+++ b/src/app/search-page/search-page.component.scss
@@ -83,6 +83,9 @@
   max-height: 1.5em;
   overflow: hidden;
 }
+.bug-status, .bug-priority {
+  margin-top: 2px;
+}
 .bug-information {
   margin-top: 2px;
 }
