add search button to main page because it  empty page now

--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -1,2 +1,2 @@
 <router-outlet></router-outlet>
-<!-- <button mat-button routerLink='/search'>Search</button> -->
+<button mat-button routerLink='/search'>Search</button>
