--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,4 +20,9 @@
   </mat-toolbar-row>
 </mat-toolbar>
 
+<div class="loading-resources-block" *ngIf="(auth.loader$ | async)">
+  <span> Wait for loading more resources.</span>
+  <span>This needs to be done only 1 time.</span>
+  <mat-progress-bar mode="buffer" style="margin-top: 1em;"></mat-progress-bar>
+</div>
 <router-outlet></router-outlet>
