--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -7,3 +7,13 @@
 .toolbar-fill-space {
   flex: 1 1 auto;
 }
+
+.loading-resources-block {
+  font-size: 2em;
+  padding: 3em;
+  display: flex;
+  margin: auto;
+  text-align: center;
+  flex-direction: column;
+  line-height: initial;
+}
