--- a/src/app/bug-details/bug-details.component.scss
+++ b/src/app/bug-details/bug-details.component.scss
@@ -3,11 +3,11 @@
   flex: 2;
   max-width: 70em;
   overflow: auto;
+  flex-direction: column;
 }
 
 .result {
   display: inline-table;
-  width: 100%;
   margin: 0.5em;
 }
 
@@ -22,7 +22,8 @@
 
 .comment-text {
   white-space: pre-wrap;
-  word-break: break-all;
+  word-break: break-word;
+  // word-break: break-all;
 }
 .comment {
   padding-top: 1em;
@@ -39,4 +40,38 @@
   display: flex;
   justify-content: flex-start;
   flex-wrap: wrap;
+}
+
+.creator-image {
+  width: 2em;
+    background-size: cover;
+    width: 4em;
+    height: 4em;
+    flex-shrink: 0;
+    object-fit: cover;
+}
+
+.avatar-image {
+  width: inherit;
+  height: inherit;
+}
+
+.comment {
+  padding: 0;
+  display: flex;
+}
+.left-block-comment {
+  background-color: #e2e2e2;
+}
+.right-block-comment {
+  flex: 1;
+  display: block;
+}
+.comment-date {
+  font-size: 0.8em;
+  float: right;
+  margin: 0.3em;
+}
+.comment-text {
+  margin: 0.5em;
 }
