change toolbar size because it was too big

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar color="primary">
-  <mat-toolbar-row>
+  <mat-toolbar-row class="toolbar">
     <span>Buguette</span>
     <span class="toolbar-fill-space"></span>
 
