change tollbar location for performance boosl

--- a/src/app/login-page/login-page.component.html
+++ b/src/app/login-page/login-page.component.html
@@ -1,3 +1,10 @@
+<mat-toolbar color="primary">
+  <mat-toolbar-row class="toolbar">
+    <span>Buguette</span>
+    <span class="toolbar-fill-space"></span>
+  </mat-toolbar-row>
+</mat-toolbar>
+
 <mat-tab-group mat-align-tabs="center" dynamicHeight=true>
   <mat-tab label="Login/Password">
     <mat-card>
