--- a/src/app/main-page/main-page.component.scss
+++ b/src/app/main-page/main-page.component.scss
@@ -1,7 +1,34 @@
 :host {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  overflow: hidden;
+}
+
+.main-page {
   flex: 1;
   display: flex;
   flex-direction: column;
   overflow: hidden;
   margin: 0 3% 0 3%;
+}
+
+.toolbar-fill-space {
+  flex: 1 1 auto;
+}
+
+.loading-resources-block {
+  font-size: 2em;
+  padding: 3em;
+  display: flex;
+  margin: auto;
+  text-align: center;
+  flex-direction: column;
+  line-height: initial;
+}
+.mat-toolbar-multiple-rows {
+  min-height: 0;
+}
+.toolbar {
+  height: 2em;
 }
