--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -4,3 +4,15 @@
   flex: 1;
   overflow: hidden;
 }
+.account-message {
+  display: flex;
+  margin: auto;
+}
+.loading-resources-block {
+  display: flex;
+  flex-direction: column;
+}
+.text {
+  display: grid;
+  padding-right: 0.5em;
+}
