chenge search position because it looks good

--- a/src/app/search-page/search-page.component.html
+++ b/src/app/search-page/search-page.component.html
@@ -109,7 +109,7 @@
     </div>
   </div>
   <div class="actions-for-search">
-    <button (click)="search()" mat-fab color="primary" [disabled]=loading>
+    <button (click)="search()" mat-fab color="primary" [disabled]=loading class="search-button">
       <mat-icon>search</mat-icon>
     </button>
   </div>
