--- a/src/app/search-page/search-page.component.html
+++ b/src/app/search-page/search-page.component.html
@@ -11,8 +11,8 @@
       <div class="search-field-block">
         <mat-form-field appearance="fill" class="search-field">
           <mat-label>Filter</mat-label>
-          <input matInput type="search" [(ngModel)]="value" autocomplete="off">
-          <button mat-button *ngIf="value" matSuffix mat-icon-button aria-label="Clear" (click)="value=''">
+          <input matInput type="search" [(ngModel)]="quicksearch" autocomplete="off">
+          <button mat-button *ngIf="quicksearch" matSuffix mat-icon-button aria-label="Clear" (click)="quicksearch=''">
             <mat-icon>close</mat-icon>
           </button>
         </mat-form-field>
